--- a/src/index.scss
+++ b/src/index.scss
@@ -16,5 +16,45 @@ h1 {
   line-height: normal;
 }
 
+body {
+  background-image: url('/images/shop-by-ashim-dsilva.jpg');
+  background-repeat: no-repeat;
+  background-size: 960px;
+  position: relative;
+  @media (min-width: 500px) {
+    background-size: 1000px;
+  }
+  @media (min-width: 1024px) {
+    background-size: cover;
+  }
+  &::before {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    content: "";
+    background-color: rgba($color: #000000, $alpha: 0.5);
+    box-shadow: inset 0 0 8rem rgba(0, 0, 0, 1);
+    z-index: -1;
+  }
+  overflow: hidden;
+}
+
+input {
+  outline: none;
+  border: none;
+  background: none;
+}
+
+input:focus {
+  outline: none;
+  background: none;
+}
+
+button {
+  outline: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
 
 
