--- a/src/index.scss
+++ b/src/index.scss
@@ -19,12 +19,12 @@ h1 {
 body {
   background-image: url('/images/shop-by-ashim-dsilva.jpg');
   background-repeat: no-repeat;
-  background-size: 1150px;
   position: relative;
-  background-position-x: -100px;
+  background-position-x: -500px;
   background-position-y: -100px;
   @media (min-width: 500px) {
-    background-size: 1000px;
+    background-position-x: -0px;
+    background-position-y: 0px;
   }
   @media (min-width: 1024px) {
     background-size: cover;
@@ -32,13 +32,15 @@ body {
   &::before {
     position: absolute;
     width: 100%;
-    height: 960px;
+    height: 100vh;
     content: "";
     background-color: rgba($color: #000000, $alpha: 0.5);
     box-shadow: inset 0 0 8rem rgba(0, 0, 0, 1);
     z-index: -1;
+    @media (min-width: 500px) {
+      height: 100vh;
+    }
   }
-  overflow: hidden;
 }
 
 input {
