--- a/src/index.scss
+++ b/src/index.scss
@@ -20,8 +20,9 @@ body {
   background-image: url('/images/shop-by-ashim-dsilva.jpg');
   background-repeat: no-repeat;
   position: relative;
-  background-position-x: -500px;
-  background-position-y: -100px;
+  background-size: 1300px;
+  background-position-x: -200px;
+  background-position-y: -50px;
   @media (min-width: 500px) {
     background-position-x: -0px;
     background-position-y: 0px;
@@ -32,7 +33,7 @@ body {
   &::before {
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     content: "";
     background-color: rgba($color: #000000, $alpha: 0.5);
     box-shadow: inset 0 0 8rem rgba(0, 0, 0, 1);
